# pointCalculatorbackend

./: README.md  main.py  pyproject.toml  requirements.txt  test_game_create.py  vercel.json  verify_auth.py
api/: index.py
api/endpoints/: auth.py  games.py  rules.py
core/: auth.py  config.py  security.py
db/: base.py  init_db.py  models.py  supabase.py
db/migrations/: 001_create_games_table.sql  002_create_rules_table.sql  003_create_users_table.sql  004_add_user_id_to_games.sql  005_add_user_id_to_rules.sql  006_add_avatar_color_to_users.sql
schemas/: game.py  rule.py  user.py
scripts/: create_bypass_user.py
